move anisha code from clean and join

--- a/allDataMaps.Rmd
+++ b/allDataMaps.Rmd
@@ -233,3 +233,576 @@ map %>%
     labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
     opacity = 1)
 ```
+
+
+-----
+ANISHA HERE
+-----
+
+
+#TreeCanopy
+```{r}
+
+countyShapefile <- GetCountyShapefile()
+
+
+tree_small<- all_data %>% 
+  select(FIPSCode, TreeCanopy)
+
+colnames(tree_small) <- c("GEOID", "TreeCanopy")
+
+
+tree_small[duplicated(tree_small),]
+
+
+# Merge spatial df with air quality data.
+#counties <- merge(countyShapefile, small_data, by=c("GEOID"))
+
+counties <- geo_join(countyShapefile, tree_small, "GEOID", "GEOID", how = "left")
+
+
+#Leftoin isn't used because cannot left join this data! 
+#leafmap <- us.map %>% left_join(county_dat, by = c("GEOID"))
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$TreeCanopy)
+
+
+#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$TreeCanopy
+)
+
+
+# Render final map in leaflet.
+
+map <- leaflet(counties) %>% addTiles()
+
+map %>% 
+  #Stroke indicates outline presence
+  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(TreeCanopy), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~TreeCanopy,
+    title = "Tree Canopy",
+    labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
+    opacity = 1)
+```
+
+mapping income 
+```{r}
+
+countyShapefile <- GetCountyShapefile()
+
+
+income_small<- all_data %>% 
+  select(FIPSCode, Median_Household_Income_2015)
+
+colnames(income_small) <- c("GEOID", "Income")
+
+
+income_small[duplicated(income_small),]
+
+
+# Merge spatial df with air quality data.
+#counties <- merge(countyShapefile, small_data, by=c("GEOID"))
+
+counties <- geo_join(countyShapefile, income_small, "GEOID", "GEOID", how = "left")
+
+
+#Leftoin isn't used because cannot left join this data! 
+#leafmap <- us.map %>% left_join(county_dat, by = c("GEOID"))
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$Income)
+
+
+#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$Income
+)
+
+
+# Render final map in leaflet.
+
+map <- leaflet(counties) %>% addTiles()
+
+map %>% 
+  #Stroke indicates outline presence
+  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(Income), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~Income,
+    title = "Income (2015)",
+    labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
+    opacity = 1)
+```
+
+mapping 2013 Urban Influence
+```{r}
+
+countyShapefile <- GetCountyShapefile()
+
+
+urban_small<- all_data %>% 
+  select(FIPSCode, `2013 Urban Influence Code`)
+
+colnames(urban_small) <- c("GEOID", "InfluenceCode")
+
+
+urban_small[duplicated(urban_small),]
+
+
+# Merge spatial df with air quality data.
+#counties <- merge(countyShapefile, small_data, by=c("GEOID"))
+
+counties <- geo_join(countyShapefile, urban_small, "GEOID", "GEOID", how = "left")
+
+
+#Leftoin isn't used because cannot left join this data! 
+#leafmap <- us.map %>% left_join(county_dat, by = c("GEOID"))
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$InfluenceCode)
+
+
+#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$InfluenceCode
+)
+
+
+# Render final map in leaflet.
+
+map <- leaflet(counties) %>% addTiles()
+
+map %>% 
+  #Stroke indicates outline presence
+  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(InfluenceCode), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~InfluenceCode,
+    title = "Urban Influence Code (2013)",
+    labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
+    opacity = 1)
+```
+
+mapping unemployment rate
+```{r}
+
+countyShapefile <- GetCountyShapefile()
+
+
+unemploy_small<- all_data %>% 
+  select(FIPSCode, Unemployment_rate_2015)
+
+colnames(unemploy_small) <- c("GEOID", "Unemployment")
+
+
+unemploy_small[duplicated(unemploy_small),]
+
+
+# Merge spatial df with air quality data.
+#counties <- merge(countyShapefile, small_data, by=c("GEOID"))
+
+counties <- geo_join(countyShapefile, unemploy_small, "GEOID", "GEOID", how = "left")
+
+
+#Leftoin isn't used because cannot left join this data! 
+#leafmap <- us.map %>% left_join(county_dat, by = c("GEOID"))
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$Unemployment)
+
+
+#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$Unemployment
+)
+
+
+# Render final map in leaflet.
+
+map <- leaflet(counties) %>% addTiles()
+
+map %>% 
+  #Stroke indicates outline presence
+  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(Unemployment), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~Unemployment,
+    title = "Unemployment Rate (2015)",
+    labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
+    opacity = 1)
+```
+
+mapping AvailGreenSpace
+```{r}
+
+countyShapefile <- GetCountyShapefile()
+
+
+greenSpace_small<- all_data %>% 
+  select(FIPSCode, AvailGreenSpace)
+
+colnames(greenSpace_small) <- c("GEOID", "AvailGreenSpace")
+
+
+greenSpace_small[duplicated(greenSpace_small),]
+
+
+# Merge spatial df with air quality data.
+#counties <- merge(countyShapefile, small_data, by=c("GEOID"))
+
+counties <- geo_join(countyShapefile, greenSpace_small, "GEOID", "GEOID", how = "left")
+
+
+#Leftoin isn't used because cannot left join this data! 
+#leafmap <- us.map %>% left_join(county_dat, by = c("GEOID"))
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$AvailGreenSpace)
+
+
+#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$AvailGreenSpace
+)
+
+
+# Render final map in leaflet.
+
+map <- leaflet(counties) %>% addTiles()
+
+map %>% 
+  #Stroke indicates outline presence
+  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(AvailGreenSpace), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~AvailGreenSpace,
+    title = "Available Green Space",
+    labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
+    opacity = 1)
+```
+
+
+mapping Tree Canopy Cover
+```{r}
+
+countyShapefile <- GetCountyShapefile()
+
+canopyCover_small<- all_data %>% 
+  select(FIPSCode, TreeCanopyCover)
+
+colnames(canopyCover_small) <- c("GEOID", "TreeCanopyCover")
+
+
+canopyCover_small[duplicated(canopyCover_small),]
+
+
+# Merge spatial df with air quality data.
+#counties <- merge(countyShapefile, small_data, by=c("GEOID"))
+
+counties <- geo_join(countyShapefile, canopyCover_small, "GEOID", "GEOID", how = "left")
+
+
+#Leftoin isn't used because cannot left join this data! 
+#leafmap <- us.map %>% left_join(county_dat, by = c("GEOID"))
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$TreeCanopyCover)
+
+
+#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$TreeCanopyCover
+)
+
+
+# Render final map in leaflet.
+
+map <- leaflet(counties) %>% addTiles()
+
+map %>% 
+  #Stroke indicates outline presence
+  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(TreeCanopyCover), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~TreeCanopyCover,
+    title = "Tree Canopy Cover",
+    labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
+    opacity = 1)
+```
+
+mapping `Percent of adults with less than a high school diploma, 2011-2015`
+```{r}
+
+countyShapefile <- GetCountyShapefile()
+
+lessThanHS_small<- all_data %>% 
+  select(FIPSCode, `Percent of adults with less than a high school diploma, 2011-2015`)
+
+colnames(lessThanHS_small) <- c("GEOID", "LessThanHS")
+
+
+lessThanHS_small[duplicated(lessThanHS_small),]
+
+
+# Merge spatial df with air quality data.
+#counties <- merge(countyShapefile, small_data, by=c("GEOID"))
+
+counties <- geo_join(countyShapefile, lessThanHS_small, "GEOID", "GEOID", how = "left")
+
+
+#Leftoin isn't used because cannot left join this data! 
+#leafmap <- us.map %>% left_join(county_dat, by = c("GEOID"))
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$LessThanHS)
+
+
+#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$LessThanHS
+)
+
+
+# Render final map in leaflet.
+
+map <- leaflet(counties) %>% addTiles()
+
+map %>% 
+  #Stroke indicates outline presence
+  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(LessThanHS), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~LessThanHS,
+    title = "Percent of adults with less than a high school diploma, 2011-2015",
+    labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
+    opacity = 1)
+```
+
+`Percent of adults with a high school diploma only, 2011-2015`
+```{r}
+
+countyShapefile <- GetCountyShapefile()
+
+HSDip_small<- all_data %>% 
+  select(FIPSCode, `Percent of adults with a high school diploma only, 2011-2015`)
+
+colnames(HSDip_small) <- c("GEOID", "HSDip")
+
+
+lessThanHS_small[duplicated(lessThanHS_small),]
+
+
+# Merge spatial df with air quality data.
+#counties <- merge(countyShapefile, small_data, by=c("GEOID"))
+
+counties <- geo_join(countyShapefile, HSDip_small, "GEOID", "GEOID", how = "left")
+
+
+#Leftoin isn't used because cannot left join this data! 
+#leafmap <- us.map %>% left_join(county_dat, by = c("GEOID"))
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$HSDip)
+
+
+#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$HSDip
+)
+
+
+# Render final map in leaflet.
+
+map <- leaflet(counties) %>% addTiles()
+
+map %>% 
+  #Stroke indicates outline presence
+  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(HSDip), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~HSDip,
+    title = "`Percent of adults with a high school diploma only, 2011-2015",
+    labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
+    opacity = 1)
+```
+
+mapping Percent of adults completing some college or associate's degree, 2011-2015
+```{r}
+
+countyShapefile <- GetCountyShapefile()
+
+college_small<- all_data %>% 
+  select(FIPSCode, `Percent of adults completing some college or associate's degree, 2011-2015`)
+
+colnames(college_small) <- c("GEOID", "College")
+
+
+college_small[duplicated(college_small),]
+
+
+# Merge spatial df with air quality data.
+#counties <- merge(countyShapefile, small_data, by=c("GEOID"))
+
+counties <- geo_join(countyShapefile, college_small, "GEOID", "GEOID", how = "left")
+
+
+#Leftoin isn't used because cannot left join this data! 
+#leafmap <- us.map %>% left_join(county_dat, by = c("GEOID"))
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$College)
+
+
+#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$College
+)
+
+
+# Render final map in leaflet.
+
+map <- leaflet(counties) %>% addTiles()
+
+map %>% 
+  #Stroke indicates outline presence
+  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(College), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~College,
+    title = "Percent of adults completing some college or associate's degree, 2011-2015",
+    labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
+    opacity = 1)
+```
+
+mapping Percent of adults with a bachelor's degree or higher, 2011-2015
+```{r}
+
+countyShapefile <- GetCountyShapefile()
+
+bach_small<- all_data %>% 
+  select(FIPSCode, `Percent of adults with a bachelor's degree or higher, 2011-2015`)
+
+colnames(bach_small) <- c("GEOID", "Bachelor")
+
+
+bach_small[duplicated(bach_small),]
+
+
+# Merge spatial df with air quality data.
+#counties <- merge(countyShapefile, small_data, by=c("GEOID"))
+
+counties <- geo_join(countyShapefile, bach_small, "GEOID", "GEOID", how = "left")
+
+
+#Leftoin isn't used because cannot left join this data! 
+#leafmap <- us.map %>% left_join(county_dat, by = c("GEOID"))
+
+# Format popup data for leaflet map.
+popup_dat <- paste(sep = "<br/>",
+  "<b>County: </b>", 
+  counties$NAME, 
+  "<b>Value: </b>", 
+  counties$Bachelor)
+
+
+#pal <- colorQuantile("YlOrRd", NULL, n = 9)  #Manual color bins
+
+#Let leaflet calculate the colors and labels for you 
+pal <- colorNumeric(
+  palette =  "YlGnBu",
+  domain = counties$Bachelor
+)
+
+
+# Render final map in leaflet.
+
+map <- leaflet(counties) %>% addTiles()
+
+map %>% 
+  #Stroke indicates outline presence
+  #smoothFactor: how much to simplify the polyline on each zoom level (more means better performance and less accurate representation)
+  addPolygons(stroke = TRUE, color = "white", weight = .1, smoothFactor = 0.5, opacity = 1, 
+    fillColor = ~pal(Bachelor), fillOpacity = 1, popup = popup_dat, 
+    highlight = highlightOptions(color = "#666", weight = 2, bringToFront = TRUE)) %>%
+  addLegend("bottomright", pal = pal, values = ~Bachelor,
+    title = "Percent of adults with a bachelor's degree or higher, 2011-2015",
+    labFormat = labelFormat(suffix = "Units"), na.label = "county data missing",
+    opacity = 1)
+```
+
